--- a/coffee-maker/pom.xml
+++ b/coffee-maker/pom.xml
@@ -54,6 +54,19 @@
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>1.5.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-rest</artifactId>
+    </dependency>
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>42.2.10</version>
+      </dependency>
   </dependencies>
 
   <build>
